# cabal-edit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal-add.cabal  cabal-edit  cabal-edit.cabal  cabal-edit.nix  default.nix  hie.yaml  nixpkgs.nix  shell.nix  stack.yaml
.github/workflows/: cabal.yml  stack.yml
exe/: Main.hs
