cabal-version:      3.0
name:               cabal-edit
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          2020 Stephen Diehl
maintainer:         stephen.m.diehl@gmail.com
author:             sdiehl
bug-reports:        https:/www.github.com/sdiehl/cabal-add/issues
synopsis:           Cabal add
description:        Cabal add dependencies
category:           Cabal
build-type:         Simple
extra-source-files:
    CHANGELOG.md
    README.md

library
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base >=4.12,
        time >=1.8,
        aeson ^>=1.5

executable cabal-edit
    main-is:          Main.hs
    hs-source-dirs:   exe
    default-language: Haskell2010
    build-depends:
        base >=4.12,
        Cabal >=3.0,
        containers >=0.6,
        hackage-db >=2.1,
        optparse-applicative >=0.15,
        pretty-simple -any,
        time >=1.8
