cabal-version:      3.0
name:               cabal-edit
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          2020 Stephen Diehl
maintainer:         stephen.m.diehl@gmail.com
author:             sdiehl
bug-reports:        https:/www.github.com/sdiehl/cabal-add/issues
synopsis:           Cabal add
description:        Cabal add dependencies
category:           Cabal
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

executable cabal-edit
  main-is:          Main.hs
  hs-source-dirs:   exe
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , base                  >=4.12
    , bytestring            ^>=0.10
    , Cabal                 >=3.0
    , containers            >=0.6
    , directory             ^>=1.3
    , filepath              ^>=1.4
    , Glob                  ^>=0.10
    , hackage-db            >=2.1
    , optparse-applicative  >=0.15
    , parsec                ^>=3.1
    , store                 >=0.7
    , time                  >=1.8
