cabal-version:      3.0
name:               cabal-edit
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          2020 Stephen Diehl
maintainer:         stephen.m.diehl@gmail.com
author:             sdiehl
bug-reports:        https://www.github.com/sdiehl/cabal-edit/issues
synopsis:           Cabal utility
description:
  A utility for managing Hackage dependencies from the command line.

category:           Development
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: git@github.com:sdiehl/cabal-edit.git

executable cabal-edit
  main-is:          Main.hs
  hs-source-dirs:   exe
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , base                  >=4.12 && <5.0
    , bytestring            ^>=0.10
    , Cabal                 >=3.0  && <4.0
    , containers            ^>=0.6
    , directory             ^>=1.3
    , filepath              ^>=1.4
    , Glob                  ^>=0.10
    , hackage-db            ^>=2.1
    , optparse-applicative  ^>=0.15
    , process               ^>=1.6
    , store                 ^>=0.7
    , time                  >=1.8  && <1.11
